@@ -217,71 +217,6 @@ CFAllocatorGetTypeID(void)
 
 
 //
-// CFType Functions
-//
-CFStringRef
-CFCopyDescription (CFTypeRef cf)
-{
-  return (CFStringRef)CFRetain([(id)cf description]);
-}
-
-CFStringRef
-CFCopyTypeIDDescription (CFTypeID typeID)
-{
-  return (CFStringRef)[(Class)typeID description];
-}
-
-Boolean
-CFEqual (CFTypeRef cf1, CFTypeRef cf2)
-{
-  return [(id)cf1 isEqual: (id)cf2];
-}
-
-CFAllocatorRef
-CFGetAllocator (CFTypeRef cf)
-{
-  return (CFAllocatorRef)[(id)cf zone];
-}
-
-CFIndex
-CFGetRetainCount (CFTypeRef cf)
-{
-  return [(id)cf retainCount];
-}
-
-CFTypeID
-CFGetTypeID (CFTypeRef cf)
-{
-  return (CFTypeID)[(id)cf class];
-}
-
-CFHashCode
-CFHash (CFTypeRef cf)
-{
-  return [(id)cf hash];
-}
-
-CFTypeRef
-CFMakeCollectable (CFTypeRef cf)
-{
-  return NULL;
-}
-
-void
-CFRelease (CFTypeRef cf)
-{
-  RELEASE((id)cf);
-}
-
-CFTypeRef
-CFRetain (CFTypeRef cf)
-{
-  return (CFTypeRef)RETAIN((id)cf);
-}
-
-
-
-//
 // CFNull
 //
 /* FIXME: need to initialize this variable somewhere. */
